@@ -50,7 +50,6 @@ import org.eclipse.jface.dialogs.ProgressMonitorDialog;
 import org.eclipse.jface.operation.IRunnableWithProgress;
 import org.eclipse.linuxtools.cdt.autotools.ui.AutotoolsUIPlugin;
 import org.eclipse.linuxtools.internal.cdt.autotools.core.AutotoolsNewMakeGenerator;
-import org.eclipse.linuxtools.profiling.launch.IProcess;
 import org.eclipse.linuxtools.profiling.launch.IRemoteCommandLauncher;
 import org.eclipse.linuxtools.profiling.launch.IRemoteFileProxy;
 import org.eclipse.linuxtools.profiling.launch.RemoteProxyManager;
@@ -264,7 +263,7 @@ public abstract class InvokeAction extends AbstractTargetAction {
 						InvokeMessages.getFormattedString("InvokeAction.progress.message", // $NON-NLS-1$
 								new String[]{command.toOSString()}), IProgressMonitor.UNKNOWN);
 				monitor.worked(1);
-				IProcess process = cmdL.execute(command, argumentList, envList,
+				Process process = cmdL.execute(command, argumentList, envList,
 						execDir, new NullProgressMonitor());
 
 				if (cmdL.waitAndRead(stdout, stderr, new NullProgressMonitor()) == IRemoteCommandLauncher.OK) {
@@ -426,7 +425,7 @@ public abstract class InvokeAction extends AbstractTargetAction {
 
 //								launcher.showCommand(true);
 								// Run the shell script via shell command.
-								IProcess proc = launcher.execute(new Path(SHELL_COMMAND), newArgumentList, env,
+								Process proc = launcher.execute(new Path(SHELL_COMMAND), newArgumentList, env,
 										execDir, new NullProgressMonitor());
 								if (proc != null) {
 									try {
